--- a/bootcamp/day 07/Análise de Dados em Alto Desempenho - Parte 01.ipynb
+++ b/bootcamp/day 07/Análise de Dados em Alto Desempenho - Parte 01.ipynb
@@ -90,7 +90,17 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 23.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install --upgrade pandas --quiet"
    ]
@@ -1103,7 +1113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
