--- a/bootcamp/day 10/Juntando as Peças.ipynb
+++ b/bootcamp/day 10/Juntando as Peças.ipynb
@@ -53,31 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3d0e41b8-f13e-4de0-b081-cd6a1e923c46",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install --upgrade plotly --quiet"
+    "#!pip install --upgrade plotly --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "d8574682",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install --upgrade plotly pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "17f2464f-f812-4482-9b86-4f60d67e05cd",
    "metadata": {
     "slideshow": {
@@ -88,6 +88,7 @@
    "source": [
     "import plotly.express as px\n",
     "import plotly.io as pio\n",
+    "\n",
     "pio.renderers.default = 'iframe'"
    ]
   },
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e5c4bb49-af08-4ea6-8684-d99f9c9cb84a",
    "metadata": {},
    "outputs": [],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "61e90a16-ba9c-46cc-b658-57e1aae63512",
    "metadata": {},
    "outputs": [],
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "29976528-457a-44fa-ba54-1021b4575494",
    "metadata": {
     "slideshow": {
@@ -163,7 +164,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_5.html\"\n",
+       "    src=\"iframe_figures/figure_7.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f8749fd4-4972-405a-8b37-5472676558b9",
    "metadata": {
     "slideshow": {
@@ -205,7 +206,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_6.html\"\n",
+       "    src=\"iframe_figures/figure_8.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "39bcd4ce-4f0a-4a38-a490-48ce3fdfc8a5",
    "metadata": {
     "slideshow": {
@@ -248,7 +249,7 @@
        "    scrolling=\"no\"\n",
        "    width=\"100%\"\n",
        "    height=\"545px\"\n",
-       "    src=\"iframe_figures/figure_7.html\"\n",
+       "    src=\"iframe_figures/figure_9.html\"\n",
        "    frameborder=\"0\"\n",
        "    allowfullscreen\n",
        "></iframe>\n"
@@ -294,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
