--- a/bootcamp/day 11/Regressão Linear.ipynb
+++ b/bootcamp/day 11/Regressão Linear.ipynb
@@ -94,7 +94,17 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 23.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install --upgrade statsmodels --quiet"
    ]
@@ -321,129 +331,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nome</th>\n",
-       "      <th>regiao</th>\n",
-       "      <th>Densidade demográfica</th>\n",
-       "      <th>IDH</th>\n",
-       "      <th>Rendimento mensal domiciliar per capita</th>\n",
-       "      <th>Veículos per capita</th>\n",
-       "      <th>TaxaLetalidade</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Acre</td>\n",
-       "      <td>Norte</td>\n",
-       "      <td>5.06</td>\n",
-       "      <td>0.710</td>\n",
-       "      <td>1038</td>\n",
-       "      <td>0.402851</td>\n",
-       "      <td>0.012576</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Alagoas</td>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>112.38</td>\n",
-       "      <td>0.684</td>\n",
-       "      <td>935</td>\n",
-       "      <td>0.330674</td>\n",
-       "      <td>0.021420</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Amazonas</td>\n",
-       "      <td>Norte</td>\n",
-       "      <td>2.53</td>\n",
-       "      <td>0.700</td>\n",
-       "      <td>965</td>\n",
-       "      <td>0.271440</td>\n",
-       "      <td>0.022690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Amapá</td>\n",
-       "      <td>Norte</td>\n",
-       "      <td>5.15</td>\n",
-       "      <td>0.688</td>\n",
-       "      <td>1177</td>\n",
-       "      <td>0.317230</td>\n",
-       "      <td>0.011640</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Bahia</td>\n",
-       "      <td>Nordeste</td>\n",
-       "      <td>25.03</td>\n",
-       "      <td>0.691</td>\n",
-       "      <td>1010</td>\n",
-       "      <td>0.345750</td>\n",
-       "      <td>0.017558</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        nome    regiao  Densidade demográfica    IDH  \\\n",
-       "id                                                     \n",
-       "12      Acre     Norte                   5.06  0.710   \n",
-       "27   Alagoas  Nordeste                 112.38  0.684   \n",
-       "13  Amazonas     Norte                   2.53  0.700   \n",
-       "16     Amapá     Norte                   5.15  0.688   \n",
-       "29     Bahia  Nordeste                  25.03  0.691   \n",
-       "\n",
-       "    Rendimento mensal domiciliar per capita  Veículos per capita  \\\n",
-       "id                                                                 \n",
-       "12                                     1038             0.402851   \n",
-       "27                                      935             0.330674   \n",
-       "13                                      965             0.271440   \n",
-       "16                                     1177             0.317230   \n",
-       "29                                     1010             0.345750   \n",
-       "\n",
-       "    TaxaLetalidade  \n",
-       "id                  \n",
-       "12        0.012576  \n",
-       "27        0.021420  \n",
-       "13        0.022690  \n",
-       "16        0.011640  \n",
-       "29        0.017558  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'state_infections_characteristics'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lilia\\OneDrive - UFRGS\\Cursos\\Bootcamp\\bootcamp-analise-de-dados-enap-2023\\bootcamp\\day 11\\Regressão Linear.ipynb Cell 19\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lilia/OneDrive%20-%20UFRGS/Cursos/Bootcamp/bootcamp-analise-de-dados-enap-2023/bootcamp/day%2011/Regress%C3%A3o%20Linear.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data \u001b[39m=\u001b[39m load_data()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lilia/OneDrive%20-%20UFRGS/Cursos/Bootcamp/bootcamp-analise-de-dados-enap-2023/bootcamp/day%2011/Regress%C3%A3o%20Linear.ipynb#X24sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df \u001b[39m=\u001b[39m \\\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/lilia/OneDrive%20-%20UFRGS/Cursos/Bootcamp/bootcamp-analise-de-dados-enap-2023/bootcamp/day%2011/Regress%C3%A3o%20Linear.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     data[\u001b[39m'\u001b[39;49m\u001b[39mstate_infections_characteristics\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mset_index(\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/lilia/OneDrive%20-%20UFRGS/Cursos/Bootcamp/bootcamp-analise-de-dados-enap-2023/bootcamp/day%2011/Regress%C3%A3o%20Linear.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'state_infections_characteristics'"
+     ]
     }
    ],
    "source": [
@@ -672,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c590b8e4-70df-4c89-b603-29d14e3325a3",
    "metadata": {
     "editable": true,
@@ -789,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cb008e9f-db00-4bbe-bbd2-edcf0862c12a",
    "metadata": {
     "editable": true,
@@ -847,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "06f93933-3d73-4feb-918d-fab61e56c794",
    "metadata": {
     "editable": true,
@@ -863,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8e5232f4-7cee-4faa-ab50-b3b02d44bf52",
    "metadata": {
     "editable": true,
@@ -884,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "892efc7b-79aa-4f54-8aab-65d19679cf81",
    "metadata": {
     "editable": true,
@@ -964,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "98f9b066-b664-483c-9ee4-f1b3704b40d7",
    "metadata": {
     "editable": true,
@@ -1272,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "67300872-5bc3-4a61-b265-a7a612e23897",
    "metadata": {
     "editable": true,
@@ -1426,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ade128ba-4e42-4629-be76-617d7cdf31e1",
    "metadata": {
     "editable": true,
@@ -1544,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2f208279-5ced-4955-a245-a7e7f6d8a087",
    "metadata": {
     "editable": true,
@@ -1562,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c5cd04be-fc4d-4f3d-95d4-aa5c34a375a2",
    "metadata": {
     "editable": true,
@@ -1764,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "846448ea-123f-4dff-8e9b-59aa759cfcc7",
    "metadata": {
     "editable": true,
@@ -1781,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9bdd250a-8813-4658-8be6-ffca33d70f7d",
    "metadata": {
     "editable": true,
@@ -1850,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "2955d971-8e2f-4f4f-a183-4b4353fbacb9",
    "metadata": {
     "editable": true,
@@ -1867,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "58240a26-73ec-46aa-8d52-16de3df1064d",
    "metadata": {
     "editable": true,
@@ -1968,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "95fdb9c9-f1bf-4313-98e1-6d23bfd76a81",
    "metadata": {
     "editable": true,
@@ -2013,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c4e88274-4beb-41bf-b84e-c2e2faba4996",
    "metadata": {
     "editable": true,
@@ -2098,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b6e0ea9a-3293-4cd8-aab4-fc66f8ab1134",
    "metadata": {
     "editable": true,
@@ -2197,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a69ae3f1-920f-4b71-9b62-7f20914843ca",
    "metadata": {
     "editable": true,
@@ -2303,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1b996798-14ca-4510-979e-1b42a7975d4b",
    "metadata": {
     "editable": true,
@@ -2333,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "fafadb9a-ef11-493d-8860-cca5775458dd",
    "metadata": {
     "editable": true,
@@ -2363,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "94f2c5bb-e9c0-450f-a942-59b946ff4873",
    "metadata": {
     "editable": true,
@@ -2406,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5eb8be16-116b-4361-87b5-19b90987d9cd",
    "metadata": {
     "editable": true,
@@ -2449,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "a5c9d32f-3bfc-498c-a892-c4280a974529",
    "metadata": {
     "editable": true,
@@ -2476,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "3966601e-6605-4921-b5c0-f6f907ef68bd",
    "metadata": {
     "editable": true,
@@ -2517,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9527c706-aa93-4f3f-893d-96260f527a26",
    "metadata": {
     "editable": true,
@@ -2559,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "294b5ef5-bc94-4371-b7aa-15f3d431b4f6",
    "metadata": {
     "editable": true,
@@ -3051,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3e4f16ca-f0d3-4d1e-83f5-5336d4fd40a7",
    "metadata": {
     "editable": true,
@@ -3068,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "de352d83-2535-4165-87fc-19b5bf151af1",
    "metadata": {
     "editable": true,
@@ -3085,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "21b35ca8-6ab7-4120-b9a9-456cffc3aeaf",
    "metadata": {
     "editable": true,
@@ -3101,7 +2997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "ff87958c-9ae6-424f-9b0d-076bd6d1a0dc",
    "metadata": {
     "editable": true,
@@ -3130,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "e6ce6457-35c3-4afb-be8b-07c22822a4d5",
    "metadata": {
     "editable": true,
@@ -3318,7 +3214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "2d947dcd-e5c2-4062-ad38-9ceb4b22a042",
    "metadata": {
     "editable": true,
@@ -3348,7 +3244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e7d9ab95-188a-411d-964d-907c6a86e7b2",
    "metadata": {
     "editable": true,
@@ -3364,7 +3260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "ee53c9e7-32ef-4ade-a273-6e7afaf8648c",
    "metadata": {
     "editable": true,
@@ -3433,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "3c9b3993-8443-4f5b-9e12-17151a6a32f9",
    "metadata": {
     "editable": true,
@@ -3469,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "e8c64a02-34fa-4d9a-933f-08f9244a0c64",
    "metadata": {
     "editable": true,
@@ -3682,7 +3578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "db13dafa-b2e9-4d6a-ac5c-494d498000a0",
    "metadata": {
     "editable": true,
@@ -3733,7 +3629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "7d6dc33b-92e6-41fd-90e3-822e6b1e9d8a",
    "metadata": {
     "editable": true,
@@ -3759,7 +3655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "3c3437ce-4c80-46ee-a06f-2858af9a55f7",
    "metadata": {
     "editable": true,
@@ -3841,7 +3737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "6aa6bf39-3bee-4e71-ba3a-4f38e1fe34aa",
    "metadata": {
     "editable": true,
@@ -3859,7 +3755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "b0da483a-57a3-4efe-b2f9-5c9edb11ee11",
    "metadata": {
     "editable": true,
@@ -3900,7 +3796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "2349b08a-013b-4646-bf28-9fa096ecbb2d",
    "metadata": {
     "editable": true,
@@ -3956,7 +3852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "1ff55c57-cad3-450e-b558-9383b67dfe35",
    "metadata": {
     "editable": true,
@@ -3973,7 +3869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "322ad7a2-ed38-42fc-94e0-345a14150dd4",
    "metadata": {},
    "outputs": [
@@ -4009,7 +3905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "627d26e5-8393-4649-b457-782bb6ca9a16",
    "metadata": {
     "editable": true,
@@ -4050,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "ed686c39-2e45-450b-9ca4-54e0666323d3",
    "metadata": {
     "editable": true,
@@ -4092,7 +3988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "2a8f3df2-3e74-4b27-8214-9cf87b53cacb",
    "metadata": {
     "editable": true,
@@ -4287,7 +4183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1
